--- a/recipes/friedchicken.html
+++ b/recipes/friedchicken.html
@@ -30,7 +30,7 @@
         <li>Drain on paper towels and serve hot.</li>
     </ol>
 
-    <img src="https://www.allrecipes.com/thmb/KDa2SYV88S0WtbtF4QzdVkh2P6k=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8349113-garlic-chicken-fried-chicken-Tacita-Lady_T-Beautiful-1x1-1-434fa1b59efc48db9a0a351322e3f45a.jpg" alt="" style="width: 500; height: auto;">
+    <img src="https://www.allrecipes.com/thmb/KDa2SYV88S0WtbtF4QzdVkh2P6k=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8349113-garlic-chicken-fried-chicken-Tacita-Lady_T-Beautiful-1x1-1-434fa1b59efc48db9a0a351322e3f45a.jpg" alt="" style="width: 500px; height: auto;">
     <br>
     <a href="../index.html">go to homepage</a>
 </body>
